--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           >Web<span class="logo-second-part">Studio</span></a
         >
         <ul class="list">
-          <li><a class="link" href="./index.html">Студія</a></li>
-          <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="link current" href="./index.html">Студія</a></li>
+          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="link" href="#">Контакти</a></li>
         </ul>
         <ul class="list">
