--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Web studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    >
+    <link rel="stylesheet" href="./css/styles.css" >
   </head>
   <body>
     <header>
@@ -90,21 +90,21 @@
               src="./images/box1.jpg"
               alt="людина друкує на клавіатурі"
               width="370"
-            />
+            >
           </li>
           <li>
             <img
               src="./images/box2.jpg"
               alt="людина тримає у руці телефон"
               width="370"
-            />
+            >
           </li>
           <li>
             <img
               src="./images/box3.jpg"
               alt="людина користується планшетом"
               width="370"
-            />
+            >
           </li>
         </ul>
       </section>
@@ -118,12 +118,12 @@
               src="./images/img.jpg"
               alt="фото Ігоря Дем'яненка"
               width="270"
-            />
+            >
             <h3 class="team-titles">Ігор Дем'яненко</h3>
             <p lang="en" class="team-text">Product Designer</p>
           </li>
           <li class="team-list">
-            <img src="./images/img1.jpg" alt="фото Ольги Рєпіної" width="270" />
+            <img src="./images/img1.jpg" alt="фото Ольги Рєпіної" width="270" >
             <h3 class="team-titles">Ольга Рєпіна</h3>
             <p lang="en" class="team-text">Frontend Developer</p>
           </li>
@@ -132,7 +132,7 @@
               src="./images/img2.jpg"
               alt="фото Миколи Тарасова"
               width="270"
-            />
+            >
             <h3 class="team-titles">Микола Тарасов</h3>
             <p lang="en" class="team-text">Marketing</p>
           </li>
@@ -141,7 +141,7 @@
               src="./images/img3.jpg"
               alt="фото Михайла Єрмакова"
               width="270"
-            />
+            >
             <h3 class="team-titles">Михайло Єрмаков</h3>
             <p lang="en" class="team-text">UI Designer</p>
           </li>
