--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Web studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    >
+    <link rel="stylesheet" href="./css/styles.css" >
   </head>
   <body>
     <header>
@@ -68,7 +68,7 @@
                 src="./images/img_(5).jpg"
                 width="370"
                 alt="ноутбук із зображенням веб-сайту з трьома людьми"
-              />
+              >
               <h2 class="portfolio-title">Технокряк</h2>
               <p class="portfolio-text">Веб-сайт</p>
             </li>
@@ -77,7 +77,7 @@
                 src="./images/img_(6).jpg"
                 width="370"
                 alt="постер з двома баскетболістами"
-              />
+              >
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
               <p class="portfolio-text">Дизайн</p>
             </li>
@@ -86,7 +86,7 @@
                 src="./images/img_(7).jpg"
                 width="370"
                 alt="логотип додатку ресторану"
-              />
+              >
               <h2 class="portfolio-title">Ресторан Seafood</h2>
               <p class="portfolio-text">Додаток</p>
             </li>
@@ -95,7 +95,7 @@
                 src="./images/img_(8).jpg"
                 width="370"
                 alt="чорні навушники на світлому фоні"
-              />
+              >
               <h2 class="portfolio-title">Проєкт Prime</h2>
               <p class="portfolio-text">Маркетинг</p>
             </li>
@@ -104,7 +104,7 @@
                 src="./images/img_(9).jpg"
                 width="370"
                 alt="біла та коричнева коробки на світлому фоні"
-              />
+              >
               <h2 class="portfolio-title">Проєкт Boxes</h2>
               <p class="portfolio-text">Додаток</p>
             </li>
@@ -113,7 +113,7 @@
                 src="./images/img_(10).jpg"
                 width="370"
                 alt="комп'ютер із зображенням сайту"
-              />
+              >
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-text">Веб-сайт</p>
             </li>
@@ -122,7 +122,7 @@
                 src="./images/img_(11).jpg"
                 width="370"
                 alt="розгорнутий журналу з картинками"
-              />
+              >
               <h2 class="portfolio-title">Видання Limited Edition</h2>
               <p class="portfolio-text">Дизайн</p>
             </li>
@@ -131,7 +131,7 @@
                 src="./images/img_(12).jpg"
                 width="370"
                 alt="біла бирка на нитці"
-              />
+              >
               <h2 class="portfolio-title">Проєкт LAB</h2>
               <p class="portfolio-text">Маркетинг</p>
             </li>
@@ -140,7 +140,7 @@
                 src="./images/img_(13).jpg"
                 width="370"
                 alt="ноутбук із зображенням додатку"
-              />
+              >
               <h2 class="portfolio-title">Growing Business</h2>
               <p class="portfolio-text">Додаток</p>
             </li>
